--- a/Hello_World.html
+++ b/Hello_World.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<style type="text/css">
-		</style>
-		<script type="text/javascript">
-		</script>
 	</head>
 <body>               
-Hello World!
-안녕하세요.
+오픈소스프로그래밍.
 </body>
 </html>
