이미지 추가`

--- a/A/students.html
+++ b/A/students.html
@@ -10,7 +10,7 @@ A반 수업
 <table>
 	<tr>
 	  <td>1</td>
-	  <td class='picture'>image here</td>
+	  <td class='picture'><img src = "images/유정식.bmp"></td>
 	  <td>유정식</td>
 	  <td>20**</td>
 	</tr>
